--- a/.pipeline/azure-pipelines.yml
+++ b/.pipeline/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
           displayName: 'Install pipenv'
         - script: pipenv install --dev
           displayName: 'Install Pipenv dependencies'
-        - script: python -m pipenv run inv setup -p snowflake -d
+        - script: python -m pipenv run inv setup -p snowflake -d -i
           displayName: 'Setup'
           env:
             SNOWFLAKE_DB_ACCOUNT: "$(snowflake_db_account)"
